--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -183,18 +183,18 @@
         }
 
         .dropdownDiv:before {
-            right: 20px !important;
+            right: 21px !important;
+          }
+        .dropdownDiv:after {
+            right: 21px !important;
           }
 
         .dropdownFeature{
            width:100% !important;
-            justify-content: center !important;
+            justify-content: left !important;
             padding-left:0px !important;
         }
-
-        
-
-}
+    }
 
 
 
@@ -210,4 +210,9 @@
         width:200px !important;
         display:flex !important;
     }
+    .dropdownFeature{
+        justify-content: center !important;
+    }
+
+      
 }
