--- a/src/assets/scss/varibles.scss
+++ b/src/assets/scss/varibles.scss
@@ -1,6 +1,6 @@
-$primary-color: #46a9ff;
+$primary-color:var(--primary-color);
 $black-color: #4c4c4c;
-$blue-gradient: #1AC6FC;
+$blue-gradient:#b35754 ;
 $grey-color: #bababa;
 $light-grey-color:#e0e0e0;
 $regular-font: 'SF-ui-text-regular';
@@ -11,4 +11,29 @@ $green-color: rgb(1, 116, 1);
 $white-color: #fff;
 $background-color :#f2f2f2;
 $button-background-color: #e5f2fe;
-$dark-blue:#1d73f0;
+$dark-blue:var(--dark-blue-color);
+$app-blue-color:var(--app-blue-color);
+$app-darkBlue-color:var(--app-darkBlue-color);
+$faded-label-color:var(--faded-label-color);
+
+:root{
+--primary-color:#A63936;
+--black-color:#4c4c4c;
+--blue-gradient-color:#b35754;
+--grey-color:#bababa;
+--light-grey-color:#e0e0e0;
+--regular-font:'SF-ui-text-regular';
+--light-font:'SF-ui-text-light';
+--italic-font:'SF-ui-text-italic';
+--border-color:#e5e5e5;
+--green-color:rgb(1, 116, 1);
+--white-color:#fff;
+--background-color:#f2f2f2;
+--button-background-color:: #e5f2fe;
+--dark-blue-color:rgb(143, 56, 53);
+--darkBlack-color:#000;
+--app-blue-color:#c17472;
+--app-darkBlue-color:rgb(146, 54, 50);
+--faded-label-color:rgba(0,0,0,.5);
+
+}
