--- a/src/assets/scss/varibles.scss
+++ b/src/assets/scss/varibles.scss
@@ -1,20 +1,39 @@
+// $primary-color:var(--primary-color);
+// $black-color: #4c4c4c;
+// $blue-gradient:#b35754 ;
+// $grey-color: #bababa;
+// $light-grey-color:#e0e0e0;
+// $regular-font: 'SF-ui-text-regular';
+// $light-font: 'SF-ui-text-light';
+// $italic-font: 'SF-ui-text-italic';
+// $border-color : #e5e5e5;
+// $green-color: rgb(1, 116, 1);
+// $white-color: #fff;
+// $background-color :#f2f2f2;
+// $button-background-color: #e5f2fe;
+// $dark-blue:var(--dark-blue-color);
+// $app-blue-color:var(--app-blue-color);
+// $app-darkBlue-color:var(--app-darkBlue-color);
+// $faded-label-color:var(--faded-label-color);
+
 $primary-color:var(--primary-color);
-$black-color: #4c4c4c;
-$blue-gradient:#b35754 ;
-$grey-color: #bababa;
-$light-grey-color:#e0e0e0;
+$black-color:var(--black-color);
+$blue-gradient:var(--blue-gradient-color) ;
+$grey-color:var(--grey-color);
+$light-grey-color:var(--light-grey-color);
 $regular-font: 'SF-ui-text-regular';
 $light-font: 'SF-ui-text-light';
 $italic-font: 'SF-ui-text-italic';
-$border-color : #e5e5e5;
-$green-color: rgb(1, 116, 1);
-$white-color: #fff;
-$background-color :#f2f2f2;
-$button-background-color: #e5f2fe;
+$border-color:var(--border-color);
+$green-color:var(--green-color);
+$white-color: var(--white-color);
+$background-color :var(--background-color);
+$button-background-color:var(--button-background-color);
 $dark-blue:var(--dark-blue-color);
 $app-blue-color:var(--app-blue-color);
 $app-darkBlue-color:var(--app-darkBlue-color);
 $faded-label-color:var(--faded-label-color);
+
 
 :root{
 --primary-color:#A63936;
@@ -29,7 +48,7 @@ $faded-label-color:var(--faded-label-color);
 --green-color:rgb(1, 116, 1);
 --white-color:#fff;
 --background-color:#f2f2f2;
---button-background-color:: #e5f2fe;
+--button-background-color: #e5f2fe;
 --dark-blue-color:rgb(143, 56, 53);
 --darkBlack-color:#000;
 --app-blue-color:#c17472;
