--- a/src/app/modules/operations/ops-report/ops-report.component.html
+++ b/src/app/modules/operations/ops-report/ops-report.component.html
@@ -6,7 +6,7 @@
     <div class="_full-width">
 
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-        <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm">
+        <!-- <mat-card class=" profileHeight col-xs-12 " [formGroup]="filterForm">
 
           <div class="col-xs-12 _flex-box">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-4  _flex-box _justify-content-center  userIcon ">
@@ -54,131 +54,41 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-xs-12 _noMarginPadding">
-            <div>
-              <mat-divider></mat-divider>
-            </div>
-            <div class="_flex-box _justify-content-center col-xs-12 col-md-12 col-lg-12 marginTop">
-              <div class=" _flex-box col-xs-12 col-md-3 col-lg-3 _noMarginPadding">
-                <mat-form-field class="  col-xs-6 ">
-                  <mat-label>Start</mat-label>
-                  <input matInput [matDatepicker]="picker1" formControlName="formDate" [max]="maxDate"
-                    (dateInput)="applyDate('fromDate' , $event)" (dateChange)="applyDate('fromDate' , $event.value)"
-                    (click)="picker1.open()" required>
-                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                  <mat-datepicker #picker1></mat-datepicker>
-                </mat-form-field>
-                <mat-form-field class="  col-xs-6 ">
-                  <mat-label>End</mat-label>
-                  <input matInput [matDatepicker]="picker2" (click)="picker2.open()"
-                    [disabled]="!filterForm.controls.formDate.valid" formControlName="toDate" [max]="maxDate"
-                    [min]="filterForm.controls.formDate.value" (dateInput)="applyDate('toDate' , $event.value )"
-                    (dateChange)="applyDate('toDate' , $event.value)" required>
-                  <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                  <mat-datepicker #picker2 color="primary"></mat-datepicker>
-                </mat-form-field>
-              </div>
-              <div class=" col-xs-12 col-md-2 col-lg-2 ">
-                <mat-form-field class="col-xs-12">
-                  <mat-select placeholder="Type">
-                    <mat-option *ngFor="let type of filterResult.type" [value]="type.value"
-                      (click)="selectType('type', type.value)">
-                      {{type.key}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-              <div class="col-xs-12 col-md-2 col-lg-2 ">
-                <mat-form-field class="col-xs-12 _noMarginPadding">
-                  <mat-select placeholder="Administration :-">
-                    <mat-option *ngFor="let admin of filterResult.administration" [value]="admin.value"
-                      (click)="selectType('administration', admin.value)">
-                      {{admin.key}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-              <div class=" col-xs-12 col-md-2 col-lg-2">
-                <mat-form-field class="col-xs-12 _noMarginPadding">
-                  <input matInput placeholder="School ID" (keyup)="inputChange('schoolId',$event)"
-                    [matAutocomplete]="auto" appDebounceSearch (debounceSearch)="searchSchoolIdInApi($event)"
-                    [debounceTime]="2000" [searchValue]="searchSchoolId">
-                  <mat-autocomplete #auto="matAutocomplete">
-                    <mat-option *ngFor="let option of options" [value]="option.id">
-                      {{option.id}} - {{option.name}}
-                    </mat-option>
-                  </mat-autocomplete>
-                </mat-form-field>
-              </div>
-              <div class="col-xs-12 col-md-2 col-lg-2">
-                <mat-form-field class="col-xs-12 _noMarginPadding">
-                  <input matInput placeholder="Address" (change)="inputChange('address',$event)">
-                </mat-form-field>
-              </div>
-              <div class="col-xs-12 col-md-1 col-lg-1 _flex-box _flex-end">
-                <button mat-raised-button color="primary" [disabled]="!filterForm.valid"
-                  (click)="generateReport()">Apply</button>
-              </div>
-            </div>
 
-          </div> -->
-        </mat-card>
+        </mat-card> -->
         <div class="col-xs-12 _noMarginPadding">
           <mat-accordion class="example-headers-align ">
- 
-            <mat-expansion-panel  class="marginTop"  hideToggle>
+
+            <mat-expansion-panel class="marginTop" hideToggle>
               <mat-expansion-panel-header>
-                <mat-expansion-panel-header >
-                <mat-chip> Filters : {{filterArray?.length |blank }} </mat-chip>
+                <mat-expansion-panel-header>
+                  Filters :-
+                  <mat-chip> Filters : {{filterArray?.length |blank }} </mat-chip>
+                </mat-expansion-panel-header>
               </mat-expansion-panel-header>
-              </mat-expansion-panel-header>
-          
-              <!-- <mat-form-field> -->
-                <mat-chip-list #chipList>
-              <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable"
-                       [removable]="removable" (removed)="remove(filter)">
-                {{filter[0]}} : {{filter[1]}}
-                <!-- <i class="material-icons" matChipRemove *ngIf="removable">
-                  close
-              </i> -->
-                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-              </mat-chip>
-              <!-- <input placeholder="Filters"
-                     [matChipInputFor]="chipList"
-                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                     [matChipInputAddOnBlur]="addOnBlur"
-                     (matChipInputTokenEnd)="add($event)"> -->
-            </mat-chip-list>
-              <!-- </mat-form-field> -->
-              <!-- <mat-form-field>
-          
-                <input matInput placeholder="Date" [matDatepicker]="picker" (focus)="picker.open()" readonly>
-              </mat-form-field>
-              <mat-datepicker #picker></mat-datepicker> -->
-              <app-dynamic-form [genericData]="filterData" [genericForm]="filterForm" [genericEdit]="true"></app-dynamic-form>
+
+              <mat-chip-list #chipList>
+                <mat-chip *ngFor="let filter of filterArray" [selectable]="selectable" [removable]="removable"
+                  (removed)="remove(filter)">
+                  {{filter[0]}} : {{filter[1]}}
+                  <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+         
+              </mat-chip-list>
+           
+              <app-dynamic-form [genericData]="filterData" [genericForm]="filterForm" [genericEdit]="true">
+              </app-dynamic-form>
 
               <mat-action-row>
                 <button mat-raised-button color="warn" (click)="filterForm.reset()">reset</button>
-                <button mat-raised-button color="primary" (click)="nextStep()" [disabled]="!filterForm.valid">apply</button>
+                <button mat-raised-button color="primary" (click)="nextStep()"
+                  [disabled]="!filterForm.valid">apply</button>
               </mat-action-row>
             </mat-expansion-panel>
-          
           </mat-accordion>
         </div>
-       
-        
-        
-        <!-- Copyright 2019 Google Inc. All Rights Reserved.
-            Use of this source code is governed by an MIT-style license that
-            can be found in the LICENSE file at http://angular.io/license -->
-
-
-
-
-
-
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate">
+      <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop" *ngIf="reportGenerate">
         <mat-card class="_flex-box _justify-content-center col-xs-12">
           <h4>{{'headings.summary' | translate}} :-</h4>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 marginTop">
@@ -207,96 +117,65 @@
               [data]="reportStatus.data" [dynamicResize]="dynamicResize" [type]="reportStatus.type"
               [columnNames]="reportStatus.columnNames">
             </google-chart>
-            <!-- <div class="_flex-box _justify-content-center">
-              <span>Total School Assigned : </span>
-              <span>{{dummyObject.schoolsAssigned}} .</span>
-            </div>
-            <div class="_flex-box _justify-content-center">
-              <span>Average time taken : </span>
-              <span>{{dummyObject.averageTimeTakenForSchools}} .</span>
-            </div> -->
+           
           </div>
         </mat-card>
-      </div>
-      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop " *ngIf="reportGenerate">
-
+      </div> -->
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop " *ngIf="schoolGraph">
         <mat-card class="flex-direction-column col-xs-12">
-
           <h4> {{'headings.schoolReports'| translate}} :-</h4>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
             <mat-form-field [floatLabel]="'never'" class=" _full-width">
-              <input class="filterInput" id="search" matInput appDebounceSearch [searchValue]="searchValue"
+              <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue"
                 (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}"
-                (keyup)="searchVal($event.target.value)">
+                (keyup)="searchVal('school',$event.target.value)">
             </mat-form-field>
             <table>
-              <tr>
-                <th>School Name</th>
-                <th>School Status</th>
-                <th> Days elapsed since assessment started</th>
-                <th>% completion of assessment</th>
+              <tr >
+                <th *ngFor="let heading of schoolReport.tabularData.headers">{{heading.label}}</th>
               </tr>
-              <tr *ngFor="let school of dummyObject.schoolsReport">
-                <td>{{school.schoolName}}</td>
-                <td>{{school.status}}</td>
-                <td>{{school.daysElapsed}}</td>
-                <td>{{school.assessmentCompletedInPercent}}</td>
+              <tr *ngFor="let school of schoolReport.data">
+                <td *ngFor="let heading of schoolReport.tableHeader">{{school[heading]}}</td>
               </tr>
             </table>
-            <app-pagination [length]="100" [itemsPerPage]="[3,5,7,10]" (paginationResponse)="pageResponse($event)"
-              [paginationLabel]="'school'"></app-pagination>
-
           </div>
-          <google-chart class="marginChart" [options]="schoolGraph.schoolOptions" style="width : 100%; height: 100%;"
-            [title]="'Schools Chart'" [data]="schoolGraph.schoolData" [type]="schoolGraph.schoolType"
-            [columnNames]="schoolGraph.schoolColumnNames">
+          <div *ngFor="let Chart of schoolGraph">
+            <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
+            [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
+            [columnNames]="Chart.columnNames">
           </google-chart>
-        </mat-card>
-      </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 marginTop " *ngIf="reportGenerate">
-
-        <mat-card class="flex-direction-column col-xs-12">
-
-          <h4> {{'headings.assessorReports'| translate}} :-</h4>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
-            <table>
-              <tr>
-                <th>Lead Assessor Name</th>
-                <th>Number of schools assigned</th>
-                <th> Number of schools Completed</th>
-                <th> % of schools completed</th>
-                <th>Average days taken for school assessment</th>
-              </tr>
-              <tr *ngFor="let asessor of dummyObject.assessorsReport">
-                <td>{{asessor.name}}</td>
-                <td>{{asessor.schoolsAssigned}}</td>
-                <td>{{asessor.schoolsCompleted}}</td>
-                <td>{{asessor.schoolCompletedInPercent}}</td>
-                <td>{{asessor.averageDaysTaken}}</td>
-              </tr>
-            </table>
           </div>
-          <google-chart class="marginChart" [options]="assessorGraph.assessorOptions"
-            style="width : 100%; height: 100%;" [title]="'Acessor Graph'" [data]="assessorGraph.assessorData"
-            [type]="assessorGraph.assessorType" [columnNames]="assessorGraph.assessorColumnNames"></google-chart>
+          <app-pagination [length]="schoolReport.totalCount" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+              [paginationLabel]="'school'"></app-pagination>
         </mat-card>
-      </div>
+      </div> 
+      <div class="col-lg-12 col-md-22 col-sm-12 col-xs-12 marginTop" *ngIf="assessorGraph">
+          <mat-card class="flex-direction-column col-xs-12">
+            <h4> {{'headings.assessorReports'| translate}} :-</h4>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  ">
+              <mat-form-field [floatLabel]="'never'" class=" _full-width">
+                <input class="filterInput"  matInput appDebounceSearch [searchValue]="searchSchoolValue"
+                  (debounceSearch)="searchInApi($event)" placeholder="{{'search'| translate}}"
+                  (keyup)="searchVal('assessor',$event.target.value)">
+              </mat-form-field>
+              <table>
+                <tr >
+                  <th *ngFor="let heading of assessorReport.tabularData.headers">{{heading.label}}</th>
+                </tr>
+                <tr *ngFor="let assessor of assessorReport.data">
+                  <td *ngFor="let heading of assessorReport.tableHeader">{{assessor[heading]}}</td>
+                </tr>
+              </table>
+            </div>
+            <div *ngFor="let Chart of assessorGraph">
+              <google-chart class="marginChart" [options]="Chart.chartOptions" style="width : 100%; height: 100%;"
+              [title]="Chart.title" [data]="Chart.data" [type]="Chart.chartType"
+              [columnNames]="Chart.columnNames">
+            </google-chart>
+            </div>
+            <app-pagination [length]="assessorReport.totalCount" [itemsPerPage]="itemsPerPage" (paginationResponse)="pageResponse($event)"
+                [paginationLabel]="'school'"></app-pagination>
+          </mat-card>
+        </div> 
     </div>
   </div>
-
-  <!-- <div class="paddingTop">
-    <h4> {{'headings.schoolReports'| translate}} </h4>
-    <google-chart [options]="schoolGraph.schoolOptions" [title]="'School List'" [data]="schoolGraph.schoolData"
-      [type]="schoolGraph.schoolType" [columnNames]="schoolGraph.schoolColumnNames">
-    </google-chart>
-  </div>
-
-  <div class="paddingTop">
-    <h4> {{'headings.assessorReports'| translate}} </h4>
-
-    <google-chart [options]="assessorGraph.assessorOptions" [height]=450 [width]=1024 [title]="'Acessor Graph'"
-      [data]="assessorGraph.assessorData" [type]="assessorGraph.assessorType"
-      [columnNames]="assessorGraph.assessorColumnNames"></google-chart>
-  </div>
-
-</div> -->
